added product type module
