# internal/modules/v1/product_type/dto/update_dto.go
@@ -1,0 +1,5 @@
+package dto
+
+type UpdateDTO struct {
+	Name *string `json:"name" validate:"omitempty,min=3,max=255"`
+}
