# internal/modules/v1/product_type/model/model.go
@@ -1,0 +1,10 @@
+package model
+
+import "time"
+
+type ProductType struct {
+	ID        uint `gorm:"primarykey" json:"id"`
+	CreatedAt time.Time
+	UpdatedAt time.Time
+	Name      string `gorm:"type:varchar(255);not null;unique" json:"name"`
+}
